compiler/testData/diagnostics/tests/recovery/emptyTypeArgs.kt
// RUN_PIPELINE_TILL: FRONTEND
fun main(args: Array<String>) {
    args is Array<<!SYNTAX!><!>>
}

/* GENERATED_FIR_TAGS: functionDeclaration, isExpression */
